Firefox rendering issue - css overflow auto SNAFU on webkit

--- a/style.css
+++ b/style.css
@@ -95,6 +95,9 @@ body {
 
 #header_large {
     padding-left: 58px;
+    height: 100vh;
+    position: sticky;
+    top: 0px;
 }
 
 #header_large .menu {
@@ -165,7 +168,7 @@ body {
 
 
 #master_container {
-    height: 100%;
+    /*height: 100%;*/
     position: relative;
 }
 
@@ -269,11 +272,8 @@ body {
 
 
 #page_master_container {
-    max-width: none;
-    padding: 35px 0px;
-    overflow: auto;
-    
-    padding: 0px 0px 0px 0px;
+    padding: 20px 0px 0px 0px;
+    margin-bottom: 90px;
 }
 
 @media (min-width: 768px) {
@@ -289,6 +289,7 @@ body {
 
 #page_home_container {
     color: #FFFFFF;
+    height: 70vh;
 }
 
 #page_home_blr_logo img {
@@ -312,7 +313,13 @@ body {
 }
 
 
+
+#page_sessions_container {
+    width: 100%;
+}
+
 #page_sessions_wrapper {
+
     width: 100%;
 }
 
@@ -321,14 +328,17 @@ body {
     margin-top: 0px;
     margin-left: 0px;
     margin-right: 0px;
-    max-width: 100px;
+    max-width: 85px;
 }
 
 .sessions_page_track_button {
     display: inline-block;
-    width: 100px;
     text-align: center;
     cursor: pointer;
+    padding: 0px 0px 15px 5px;
+    min-width: 85px;
+    
+    
     
 /*    margin-right: 46px;
     vertical-align: top;*/
@@ -340,6 +350,7 @@ body {
 
 .sessions_page_track_icon_name {
     font-size: 12px;
+    min-width: 85px;
     
 }
 
@@ -396,10 +407,12 @@ body {
 .sessions_page_card_title {
     font-size: 15px;
     height: 50px;
+    overflow: hidden;
 }
 
 .sessions_page_card_author {
     color: #666666;
+    font-size: 14px;
 }
 
 .sessions_page_card_comments_stats {
@@ -999,6 +1012,9 @@ body {
 
 #footer_container {
     max-width: none;
+    position: fixed;
+    bottom: 0px;
+    padding: 5px 0px 18px 0px;
 }
 
 #social_bar_container {
@@ -1012,7 +1028,7 @@ body {
 }
 
 #sidebar {
-    position: absolute;
+    position: fixed;
     background: linear-gradient(to right, #eff0bb, #d5d3dd);
     height: 100%;
     width: 225px;
@@ -1044,9 +1060,10 @@ body {
 
 
 #when_where_container {
-    position: absolute;
+    position: fixed;
+    height: 60vh;
     right: 50px;
-    top: 40%;
+    top: 0px;
     writing-mode: vertical-lr;
     transform: rotate(180deg);
     width: 50px;
@@ -1079,11 +1096,11 @@ body {
 
 
 #venue_container {
-    position: absolute;
+    position: fixed;
     top: 10%;
     right: 0px;
     background: linear-gradient(to right, #eff0bb, #d5d3dd);
-    height: 80%;
+    height: 80vh;
 }
 
 
